--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "phat-trien-ma-nguon-mo",
   "version": "0.1.0",
-  "homepage": "https://sugariz.github.io/react-gh-pages",
+  "homepage": "https://sugariz.github.io/phat-trien-ma-nguon-mo",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
